<resources>
    <string name="app_name">3sproject</string>

    <string name="slogan">Điện thoại cầm tay\nMua ngay lập tức</string>

    <string name="somethingWrong">Xảy ra lỗi. Vui lòng thử lại</string>
    <string name="googleMapAPIKey">AIzaSyB_Wiwy7Mu3fjzCHO_7E5dn5n1n6ZaxaWs</string>

    <!-- TODO: placeholder text in register and login page -->
    <string name="login_page_username_placeholder">Tên đăng nhập</string>
    <string name="login_page_password_placeholder">Mật khẩu</string>
    <string name="login_page_login3SBtn">Đăng nhập</string>
    <string name="login_page_loginFBBtn">Đăng nhập với tài khoản Facebook</string>
    <string name="login_page_loginGGBtn">Đăng nhập với tài khoản Google +</string>
    <string name="login_page_nohaveAcc">Bạn chưa có tài khoản?</string>
    <string name="login_page_forgetPassword">Quên mật khẩu?</string>
    <string name="register_page_repassword_placeholder">Nhập lại mật khẩu</string>
    <string name="register_page_email_placeholder">Email</string>
    <string name="register_page_phone_placeholder">Điện thoại</string>
    <string name="register_page_registerTitle">Đăng kí</string>
    <string name="register_page_haveAcc">Bạn đã có tài khoản?</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="name">Tên hiển thị</string>
    <string name="password">Mật Khẩu</string>
    <string name="confirm_password">Mật khẩu nhập lại không khớp</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="btn_register">Đăng kí</string>
    <string name="title_register_screen">Đăng kí</string>

    <string name="title_login_screen">Đăng nhập</string>


    <!-- TODO: placeholder text in search product to add to store -->
    <string name="search_product_page_title">Danh sách sản phẩm</string>
    <string name="search_product_searchbar_hint">Nhập sản phẩm bạn muốn tìm...</string>
    <string name="search_product_cell_content_title">Thông tin sản phẩm</string>
    <string name="search_product_cell_content_brand">Thương hiệu</string>
    <string name="search_product_cell_content_category">Danh mục sản phẩm</string>
    <string name="search_product_cell_content_desc">Mô tả sản phẩm</string>
    <string name="search_product_cell_content_addBtn">Thêm sản phẩm</string>
    <string name="title_add_alert_dialog">Thêm sản phẩm</string>
    <string name="content_add_alert_dialog">Bạn có muốn thêm sản phẩm này vào cửa hàng không?</string>
    <string name="btn_add">Thêm</string>
    <string name="close">Đóng</string>
    <string name="addSuccessful">Thêm sản phẩm thành công</string>
    <string name="promotionOption">Chiết khấu không thể vượt quá mức 100%</string>
    <string name="searhProductAddToStorePageTitle">Tìm kiếm sản phẩm</string>

    <!-- TODO: placeholder text in cart product to store -->
    <string name="cart_product_page_title">Sản phẩm được thêm</string>
    <string name="add_item">Thêm</string>
    <string name="title_delete">Xóa sản phẩm</string>
    <string name="confirm_delete">Bạn có muốn xóa sản phẩm này không?</string>
    <string name="title_delete_all">Xóa tất cả sản phẩm</string>
    <string name="confirm_delete_all">Bạn có muốn xóa tất cả sản phẩm vừa thêm không?</string>
    <string name="btn_delete">Xóa</string>
    <string name="btn_cancel">Hủy</string>
    <string name="storeCartTitle">Thêm sản phẩm</string>
    <string name="noProduct">Không có sản phẩm nào</string>
    <string name="noProductToDel">Không có sản phẩm để xóa</string>
    <string name="deletedAllProduct">Đã xóa hết sản phẩm trong giỏ</string>

    <!-- TODO: placeholder text in sale product display page -->
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="backdrop_subtitle">This season top 20 product</string>
    <string name="sale_product_title">Sản phẩm giảm giá</string>
    <string name="category_backdrop_title">Danh Mục</string>
    <string name="category_display_title">Danh mục sản phẩm</string>
    <string name="brand_display_title">Thương hiệu</string>
    <string name="type_title">Chủng loại sản phẩm</string>


    <!-- TODO: placeholder text in change password -->
    <string name="old_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="retype_password">Nhập lại mật khẩu</string>
    <string name="text_remind">Vui lòng nhập mật khẩu mới của bạn bên dưới</string>
    <string name="btn_save_change">Lưu thay đổi</string>
    <string name="title_change_password">Đổi mật khẩu</string>
    <string name="error_password_not_match">Mật khẩu nhập lại không khớp</string>
    <string name="error_validate_username">Tên người dùng không chứa kí tự đặc biệt, có nhiều hơn 6 kí tự và ít hơn 30 kí tự</string>
    <string name="error_validate_name">Tên hiển thị không chứa kí tự đặc biêt, có nhiều hơn 6 kí tự và ít hơn 30 kí tự</string>
    <string name="error_validate_username_exists">Tên người dùng đã tồn tại</string>
    <string name="error_validate_password">Mật khẩu phải bao gồm kí tự đặc biệt, kí tự chữ số, có nhiều hơn 8 kí tự và ít hơn 20 kí tự</string>
    <string name="error_validate_phone">Số điện thoại phải có độ dài 10 kí tự  hoặc 11 kí tự</string>
    <string name="error_validate_email">Email không hợp lệ</string>
    <string name="error_confirm_password">Mật khẩu nhập lại không khớp</string>
    <string name="error_empty">Bạn không thể bỏ trống trường này</string>
    <string name="duplicate_username">Tên người dùng đã tồn tại</string>
    <string name="duplicate_email">Thư điện tử đã tồn tại</string>
    <string name="duplicate_phone">Số điện thoại này đã tồn tại</string>
    <string name="length_phone">Số điện thoại phải có độ dài 10 kí tự  hoặc 11 kí tự</string>


    <!-- TODO: placeholder text in product in store display page -->
    <string name="delete_alertdialog_title">Xóa sản phẩm khỏi cửa hàng</string>
    <string name="delete_alertdialog_content">Bạn có chắc chắn xóa sản phẩm này khỏi danh mục của của hàng?</string>
    <string name="edit_alertdialog_title">Chỉnh sửa sản phẩm </string>
    <string name="edit_alertdialog_content">Bạn có muốn chỉnh sửa thông tin sản phẩm này ?</string>
    <string name="alertdialog_acceptButton">Đồng ý</string>
    <string name="alertdialog_cancelButton">Hủy</string>
    <string name="unchange">Thông tin không thay đổi</string>

    <!-- TODO: placeholder text in edit product infor in store page -->
    <string name="back_alertdialog_title">Quay lại </string>
    <string name="back_alertdialog_content">Có những thông tin đã chỉnh sửa. Bạn có chắc chắn muốn quay lại trang trước không?</string>

    <!-- TODO: placeholder text in home screen -->
    <string name="label_quantity">Số lượng: </string>
    <string name="tv_more">Xem thêm</string>

    <string name="lb_brands">Thương Hiệu</string>
    <string name="lb_sale">Sản phẩm giảm giá</string>
    <string name="lb_categories">Danh Mục Sản Phẩm</string>
    <string name="lb_more">Xem thêm</string>

    <string name="tab1">Trang chủ</string>
    <string name="tab2">Cửa hàng</string>
    <string name="tab3">Người dùng</string>

    <!-- TODO: placeholder text in store information screen -->
    <string name="doNotHaveStore">Bạn chưa có cửa hàng</string>
    <string name="orderText">Đơn hàng</string>
    <string name="productText">Sản phẩm</string>
    <string name="ownerText">Tên chủ cửa hàng</string>
    <string name="addressText">Địa chỉ</string>
    <string name="registerDateText">Ngày đăng kí</string>
    <string name="phoneText">Số điện thoại</string>
    <string name="noHaveInternetMessage">Không có kết nối</string>
    <string name="pleaseConnectInternetMessage">Vui lòng kết nối mạng</string>
    <string name="pleaseLogin">Vui lòng đăng nhập để xem thông tin cửa hàng</string>

    <!-- TODO: placeholder text in register store screen -->

    <string name="registerStorePageTitle">Đăng kí cửa hàng</string>
    <string name="errorStoreName">Tên cửa hàng không chứa kí tự đặc biệt, lớn hơn 6 kí tự và nhỏ hơn 64 kí tự!</string>
    <string name="errorPhoneNumber">errorStoreName</string>
    <string name="storeNameText">Tên cửa hàng</string>
    <string name="cityText">Tỉnh / Thành phố</string>
    <string name="townText">Quận / Huyện</string>
    <string name="communeText">Phường / Xã</string>
    <string name="locateCurrentLocationText">Lấy vị trí hiện tại của bạn làm địa chỉ của cửa hàng.</string>
    <string name="noGPSYet">Bạn chưa bật định vị. Chưa thể xác định vị trí!</string>
    <string name="yourGPS">Ví trí của bạn</string>

    <!-- TODO: placeholder text in order management screen -->
    <string name="title_order_management">Quản lý đơn hàng</string>
    <string name="waiting">Đợi xử lý</string>
    <string name="doing">Đang xử lý</string>
    <string name="done">Đã xử lý</string>
    <string name="lb_order_date">Đặt ngày:  </string>


    <string name="title_fragment_me">Người dùng</string>
    <string name="notificationKey">key=AAAAy6FA_UY:APA91bFZzblkVEFuOIabndkjShr6Vbvege_ZOOqjgBj6oK6ZiAK4284KlR5-1zkefS0GQL3SJSONX3vWf_iXaY0avSsiw505ndKIdnXcLo4-jjyNao1npqqfC0kXbIVio8m5Fqvc3VF3</string>

    <!-- TODO: facebook application -->
    <string name="facebook_app_id">2158107454303596</string>
    <string name="fb_login_protocol_scheme">fb2158107454303596</string>

    <!---->
    <!-- TODO: placeholder text in Barcode Activity -->
    <string name="error_camera">Bạn chưa cấp quyền cho ứng dụng truy cập vào máy ảnh</string>
    <string name="barcode_accpet">Cho phép ứng dụng truy cập vào máy ảnh của bạn</string>
    <string name="ok_barcode">Đồng ý</string>
    <string name="cancel_barcode">Từ chối</string>
    <string name="succesfully">Lưu thông tin thành công</string>

    <!-- TODO: placeholder text in User fragment -->
    <string name="product_management_button">Quản lý sản phẩm</string>

    <!-- TODO: placeholder text in Nearby Store Page -->
    <string name="noHaveStore">Không có cửa hàng nào</string>

    <!-- TODO: placeholder text in User Information Page -->
    <string name="editBtn">Thay đổi thông tin</string>
    <string name="error_old_pass">Mật khẩu hiện tại không đúng</string>
    <string name="store_duplicate">Tên cửa hàng đã tồn tại!</string>
</resources>
