<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.RegisterActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/appLogo"
                android:layout_height="200dp"
                android:layout_width="300dp"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="42dp"
                app:srcCompat="@drawable/chien_test_2"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"/>
            <RelativeLayout
                android:id="@+id/registerForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appLogo"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etUserNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/user_name"
                        android:textSize="13dp"
                        />
                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:textSize="10dp"
                        android:textColor="@color/errorMess"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etUserNameLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:textSize="13dp"/>
                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:textSize="10dp"
                        android:textColor="@color/errorMess"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etNewPassLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_below="@id/etNameLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textSize="13dp"/>
                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:textSize="10dp"
                        android:textColor="@color/errorMess"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etConfirmPassLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_below="@id/etNewPassLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:textSize="13dp"
                        />
                    <TextView
                        android:id="@+id/tvConfirmPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:textSize="10dp"
                        android:textColor="@color/errorMess"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/etConfirmPassLayout"
                    android:focusable="false"
                    android:focusableInTouchMode="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEmail"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:textSize="13dp"/>
                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:textSize="10dp"
                        android:textColor="@color/errorMess"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPhoneNumberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/etEmailLayout"
                    android:focusable="false"
                    android:focusableInTouchMode="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPhoneNumber"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/phone_number"
                        android:textSize="13dp"/>
                    <TextView
                        android:id="@+id/tvPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:textSize="10dp"
                        android:textColor="@color/errorMess"/>
                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btn_register"
                        android:background="@drawable/login_button"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/colorWhite"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/registerForm"
                android:layout_marginBottom="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_page_haveAcc"
                    android:textSize="13dp"/>
                <TextView
                    android:id="@+id/toLoginPageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_page_login3SBtn"
                    android:textColor="@color/colorApplication"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>