<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.ResetPasswordPage">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_above="@id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:visibility="invisible"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvOldPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/etOldPassword"
                    android:textColor="@color/errorMess"
                    android:textSize="10dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPasswordLayout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_remind"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etPasswordLayout"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/tvNewPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_error_confirm"
                        android:textColor="@color/errorMess"
                        android:textSize="10dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/etPasswordLayout1"
                    app:passwordToggleEnabled="true">

                    <TextView
                        android:id="@+id/tvConfirmPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_error_confirm"
                        android:textColor="@color/errorMess"
                        android:textSize="10dp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etConfirmPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype_password"
                        android:inputType="textPassword"
                        android:textSize="14dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_button"
            android:text="@string/btn_save_change"
            android:textColor="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/loadingBar"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>